Fix overlapping tiles during charleston

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -274,6 +274,7 @@ div.hand.shimocha div.tiles:hover::before,
 div.hand.shimocha div.calls:hover::before { z-index: -20; }
 div.hand.shimocha div.tiles:hover ~ div.calls { z-index: -40; }
 div.hand.marking { z-index: 10; }
+div.hand.marking.self { z-index: 11; }
 
 /* tile attrs */
 div.tile.reversed { transform: scaleX(-100%); }
